tests/negative/double_assign.sans
// expect-error: undefined variable
main() I {
  x = undefined_var_abc + 1
  x
}
